// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts \`theme\` prop 1`] = `
.emotion-0 {
  font-family: Roboto Slab,serif;
  font-size: 34px;
  line-height: 1.1764;
  color: black;
}

<h1
  class="emotion-0"
>
  text
</h1>
`;

exports[`renders 1`] = `
.emotion-0 {
  font-family: Roboto Slab,serif;
  font-size: 34px;
  line-height: 1.1764;
}

<h1
  class="emotion-0"
>
  heading
</h1>
`;
